--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "node server/index.cjs",
     "build:dev": "vite build --mode development",
     "mock-api": "node ./mock-server/index.js",
     "lint": "eslint .",
