--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,8 @@
+# Specify a logs bucket to satisfy Cloud Build trigger requirements when a custom
+# service account is used. Create the bucket first (see README or run
+# `gsutil mb gs://civicai-cloudbuild-logs`) and then Cloud Build will write logs
+# there for this project's builds.
+logsBucket: gs://civicai-cloudbuild-logs
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/civicai-frontend', '.']
